--- a/index.html
+++ b/index.html
@@ -192,13 +192,13 @@
         <div class="header">
             <div class="slideshow-container">
                 <div class="slide active">
-                    <img src="https://drive.google.com/uc?export=view&id=1S4vPzKSRAesUpj-ExJGjjMaV8mKVLbcm" alt="合照1">
+                    <img src="1.jpg" alt="合照1">
                 </div>
                 <div class="slide">
-                    <img src="https://drive.google.com/uc?export=view&id=1jnaLQ6_m2M_sT7t_f3YN1JNWyaNq2BHZ" alt="合照2">
+                    <img src="2.JPG" alt="合照2">
                 </div>
                 <div class="slide">
-                    <img src="https://drive.google.com/uc?export=view&id=1ugjWUq8RFc8cM5oiSfhfAcODGKim0a5y" alt="合照3">
+                    <img src="3.JPG" alt="合照3">
                 </div>
             </div>
             <div class="header-content">
@@ -268,4 +268,5 @@
         showSlides();
     </script>
 </body>
+
 </html>
