--- a/index.html
+++ b/index.html
@@ -212,11 +212,11 @@
             <div class="boarding-info">
                 <div class="info-item">
                     <div class="info-label">起飛地 Departure</div>
-                    <div class="info-value">台北松山機場</div>
+                    <div class="info-value">台北松山機場 (TSA)</div>
                 </div>
                 <div class="info-item">
                     <div class="info-label">目的地 Destination</div>
-                    <div class="info-value">名古屋</div>
+                    <div class="info-value">名古屋機場 (NGO)</div>
                 </div>
                 <div class="info-item">
                     <div class="info-label">乘客 Passenger</div>
@@ -239,7 +239,22 @@
 
                     <p>每一天和妳在一起，<br>都像是搭乘最幸福的航班，<br>能與你一起航向未來是最幸福的事。</p>
 
-                    <p>今年的禮物是為了我們的日本行進行準備，<br>還記得你還在準備考試時，<br>一直跟我說想一起出國好多次，<br>我也答應你只要你考到工作，<br>一定跟你一起出去玩，<br>這次我要送你的禮物是台吹風機，<br>我在挑選禮物時，<br>發現這台追覓的吹風機是國際版的，<br>不管何時何地你都能帶著他去旅行，<br>後面附上一張機票兌換券，<br>關於這張機票，<br>有效期限為今年年底，<br>請盡速使用。</p>
+                    <p>今年的禮物是為了我們的日本行做準備，
+                    <br>還記得妳在準備考試的那段時間，
+                    <br>總是跟我說想一起出國好多次，
+                    <br>我也答應過妳，
+                    <br>只要你考到工作，
+                    <br>一定跟你一起出去玩，
+                    <br>為了獎勵妳的努力，
+                    <br>這次我要送妳的禮物是一台吹風機。
+                    <br>當初在挑選時，
+                    <br>我發現這台追覓吹風機是國際版的，
+                    <br>不論去哪裡旅行都能帶著它，
+                    <br>後面附上一張機票兌換券，
+                    <br>最後附上一張「機票兌換券」，
+                    <br>有效期限為今年年底，
+                    <br>請妳務必盡快兌換，
+                    <br>因為我已經迫不及待想再次和妳一起啟程。</p>
 
                     <p style="text-align: right; margin-top: 30px;">你的專屬機長 阿綸王子 ✈️</p>
                 </div>
@@ -270,4 +285,5 @@
 </body>
 
 </html>
+
 
